workshop03/app-v1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv1-svc
  labels:
    name: bggappv1-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv1-po
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv1-deploy
  labels:
    name: bggappv1-deploy

spec:
  replicas: 2
  selector:
    matchLabels:
      name: bggappv1-po

  template:
    metadata:
      name: bggappv1-po
      labels:
        name: bggappv1-po
    spec:
      containers:
        - name: bggapp
          image: stackupiss/bgg-backend:v1
          args:
            - --prefix
            - /v1
          ports:
            - containerPort: 3000
          # readinessProbe:
          #   httpGet:
          #     path: /v1/healthz
          #     port: 3000
          # livenessProbe:
          #   httpGet:
          #     path: /v1/healthz
          #     port: 3000
          resources:
            requests:
              cpu: 520m
              memory: 64Mi
