workshop03/app-v2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bggappv2-svc
  labels:
    name: bggappv2-svc
spec:
  type: ClusterIP
  selector:
    name: bggappv2-po
  ports:
    - port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggappv2-deploy
  labels:
    name: bggappv2-deploy

spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggappv2-po

  template:
    metadata:
      name: bggappv2-po
      labels:
        name: bggappv2-po
    spec:
      containers:
        - name: bggapp
          image: stackupiss/bgg-backend:v2
          args:
            - --prefix
            - /v2
          ports:
            - containerPort: 3000
          # readinessProbe:
          #   httpGet:
          #     path: /v2/healthz
          #     port: 3000
          # livenessProbe:
          #   httpGet:
          #     path: /v2/healthz
          #     port: 3000
