workshop03/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bggdb-svc
  labels:
    name: bggdb-svc
spec:
  type: ClusterIP
  selector:
    name: bggdb-po
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bggdb-deploy
  labels:
    name: bggdb-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bggdb-po
  template:
    metadata:
      name: bggdb-po
      labels:
        name: bggdb-po
    spec:
      volumes:
        - name: bggdb-vol
          persistentVolumeClaim:
            claimName: bggdb-pvc
      containers:
        - name: bggdb
          image: stackupiss/bgg-database:v1
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: bggdb-vol
              mountPath: /var/lib/mysql
