workshop03/fortune.yaml
---
apiVersion: v1 
kind: Service 
metadata:
  name: fortune-svc
  labels:
    name: fortune-svc
spec:
  type: ClusterIP
  selector: 
    name: fortune-po
  ports:
  - port: 3000
    targetPort: 3000
    
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: fortune-deploy
  labels:
    name: fortune-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fortune-po
  template: 
    metadata:
      name: fortune-po
      labels:
        name: fortune-po
    spec:
      containers:
      - name: fortune
        image: chukmunnlee/fortune:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
