workshop03/ing.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bggapp-ing
  labels:
    name: bggapp-ing
  # annotations:
  #   nginx.ingress.kubernetes.io/canary: "true"
  #   nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  ingressClassName: nginx
  rules:
    - host: bgg-146.190.4.201.nip.io
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: bggappv1-svc
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: bggappv2-svc
                port:
                  number: 80
  defaultBackend:
    service:
      name: fortune-svc
      port:
        number: 3000
